--- a/SignalRSelfHostServerVB/SignalRSelfHostServerVB.vbproj
+++ b/SignalRSelfHostServerVB/SignalRSelfHostServerVB.vbproj
@@ -134,6 +134,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="SignalR.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmServer.resx">
